--- a/Historia.html
+++ b/Historia.html
@@ -4,3 +4,5 @@ Debora tiene 33 anos y nacio en Argentina,
 viviendo en todo el mundo.
 
 Hoy hablaremos de su historia.
+
+En camara parece alta pero la verdad no es tan alta.
