--- a/Historia.html
+++ b/Historia.html
@@ -3,6 +3,6 @@ Esta es la historia de Debora Ponzielli
 Debora tiene 33 anos y nacio en Argentina,
 viviendo en todo el mundo.
 
-Hoy hablaremos de su vida.
+Hoy hablaremos de su vida e historia maestra.
 
 En camara parece alta pero la verdad no es tan alta.
