--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
-    
-    <h1>Este es el titulo de mi blog</h1>
-    <p>Este es el texto de mi blog</p>
-</body>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo de mi blog</h1>
+                <p>Este es el texto de mi blog</p>
+            </div>
+        </div>
+    </body>
 </html>
