Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es el titulo de mi blog</h1>
                 <p>Este es el texto de mi blog</p>
