--- a/blogpost.html
+++ b/blogpost.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo del Blog</title>
-    <Link rel="stylesheet" href="css/estilos.css"/>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
-    
-    <h1>Aqui vamos a hacer un blogpost</h1>
-    <p>Este es el primer parrafo de inicio</p>
-
-</body>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo de mi blog</h1>
+                <p>Este es el texto de mi blog</p>
+            </div>
+        </div>
+    </body>
 </html>
