Agregado el contenido de texto al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
             <div id="post">
                 <h1>Este es el titulo de mi blog</h1>
                 <p>Este es el texto de mi blog</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut, odio cumque modi suscipit nam, rerum aperiam, cum harum nesciunt iure possimus magni. Laudantium tempora tenetur dolor, cupiditate officia adipisci illo!</p>
             </div>
         </div>
     </body>
