--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
             <div id="post">
                 <h1>Este es el titulo de mi blog</h1>
                 <p>Este es el texto de mi blog</p>
+                <p>Dale like y suscribite</p>
             </div>
         </div>
     </body>
